--- a/assets/styles/02_components/_buttons.css
+++ b/assets/styles/02_components/_buttons.css
@@ -1,7 +1,6 @@
-
 .btn-custom {
     height: var(--button-height-xs);
-    padding: var(--space-2) var(--space-3);
+    padding: 0;
     font-size: var(--font-size-sm);
     line-height: var(--line-height-tight);
     border-radius: var(--radius-md);
@@ -12,18 +11,22 @@
     color: var(--color-text-default);
 }
 
-.btn-sidebar-toggle-nav {
-    background-color: var(--color-surface-secondary);
+.btn-sidebar-toggle-show {
+    width: 50%;
+    margin: 0 !important;
+    background-color: #F0FDF4;
+    
 }
 
-.btn-sidebar-toggle-inner {
-    width: 100%;
-    margin-top: auto;
-    background-color: var(--color-warning-500);
+
+.btn-sidebar-toggle-hide {
+    width: 50%;
+    margin: 0 !important;
+    background-color: #F0FDF4;
 }
 
 .btn-period {
-    height: var(--button-height-xs);
+    height: var(--button-height-xxs);
     padding: 0 var(--space-2);
     font-size: var(--font-size-sm);
     min-width: var(--button-height-xs);
