refactor: update layout components and styling structure

--- a/assets/styles/02_components/_layout.css
+++ b/assets/styles/02_components/_layout.css
@@ -1,5 +1,10 @@
 /* Sidebar container */
 
+.filter-column {
+    padding: 0; 
+    min-width: 250px;
+    overflow-x: hidden;  /* Prevents horizontal overflow */
+}
 
 .sidebar-col.collapsed {
     width: 0;
@@ -31,14 +36,8 @@
     margin: 0;
     border: 0;
     border: 1px solid red;
-    overflow: hidden;
 }
 
-.filter-column {
-    padding: 0; 
-    min-width: 250px;
-    overflow: hidden   
-}
 
 
 .tree-container {
@@ -56,6 +55,57 @@
     border: 0; 
 }
 
+
+
+.filter-row {
+    display: flex;
+    width: 100%;
+    border: 0;
+    border: 1px solid red;
+    margin-bottom: 0 !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    align-items: center;
+    min-height: 1.8rem !important;
+}
+
+.filter-content {
+    margin: 0 !important;
+    padding: 0 !important;
+    min-height: 1.8rem !important;
+    border: 0;
+    align-items: center;
+    width: 100%;
+    display: flex;
+}
+
+.filter-row.row {
+    --bs-gutter-x: 0;
+    
+}
+
+.filter-row--vertical {
+    flex-direction: column;
+    
+    align-items: flex-start;
+    min-height: 1.8rem !important;
+}
+
+.filter-row--vertical .filter-label {
+    margin-bottom: 0;
+}
+
+.filter-row--vertical .filter-content {
+    width: 100%;
+}
+
+
+/* Period Filter Specific */
+.period-type__text {
+    font-size: var(--font-size-sm);
+    color: var(--color-text-secondary);
+    margin-bottom: 0 !important; /* Ensure no bottom margin */
+}
 
 
 
