--- a/assets/styles/02_components/_layout.css
+++ b/assets/styles/02_components/_layout.css
@@ -31,6 +31,7 @@
 .layout-wrapper {
     width: fit-content;
     position: relative;
+    overflow-x: hidden;
     padding: 0;
     margin: 0;
     border: 0;
