--- a/assets/styles/01_settings/_mixins.css
+++ b/assets/styles/01_settings/_mixins.css
@@ -31,6 +31,29 @@
 =            Container Mixins                =
 =============================================*/
 
+
+/* Tablet */
+@media screen and (min-width: 768px) {
+    :root {
+        font-size: 15px;
+    }
+}
+
+/* Desktop */
+@media screen and (min-width: 1024px) {
+    :root {
+        font-size: 16px;
+    }
+}
+
+/* Large Desktop */
+@media screen and (min-width: 1440px) {
+    :root {
+        font-size: 18px;
+    }
+}
+
+
 /* Container max-widths */
 @media (--sm-and-up) {
   .container {
