--- a/assets/styles/02_components/_layout.css
+++ b/assets/styles/02_components/_layout.css
@@ -5,6 +5,18 @@
     border: 1px solid red;
 }
 
+/* Sidebar styles */
+.sidebar-col {
+    width: min(100%, var(--datatable-width, 100%));
+    max-width: 100vw;
+    border: 1px solid red;
+    margin-bottom: 1rem;
+}
+
+.main-navbar {
+
+    
+}
 
 
 @media (max-width: 767px) {
@@ -29,6 +41,7 @@
 
 .datatable-container {
     width: fit-content;
+    max-width: none;
     border: 1px solid #ccc;
     height: calc(100% - var(--titles-height));
     overflow-x: auto;
@@ -36,10 +49,18 @@
     font-size: var(--table-font-size);
 }
 
+
+
+
+/* Base container styles */
 .layout-wrapper {
-    width: fit-content;
+    width: 100%;
+    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid red;
     position: relative;
-    overflow-x: hidden;
+    overflow-x: auto;
     padding: 0;
     margin: 0;
     border: 0;
@@ -61,6 +82,19 @@
     margin: 0;
     border: 0; 
 }
+
+
+.container-fluid {
+    min-width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    overflow-x: auto;
+}
+
+
+
 
 
 
